# ai_safety_assessment

./: .gitignore  README.md  pyproject.toml  requirements.txt
experiments/tabular_arm/: diabetes_label_noise_arm.py
experiments/text_arm/: civilcomments_loader.py  run_outcome_metric_colab.ipynb  run_scoring_colab.ipynb
paper/: references.bib
results/: civilcomments_doseresponse.csv  civilcomments_outcome_160m.csv  civilcomments_outcome_410m.csv  diabetes_outcome.csv
scripts/: make_figures.py
src/safety_rubric/: __init__.py
tests/: test_safety_rubric.py
