[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "safety_rubric"
version = "0.4.0"
description = "Automated, modality-aware pre-training dataset safety risk scoring."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy", "pandas", "scikit-learn"]

[project.optional-dependencies]
text = ["detoxify", "torch", "transformers", "datasets"]
dev  = ["pytest", "matplotlib", "xgboost", "ucimlrepo"]

[tool.setuptools.packages.find]
where = ["src"]
